{
  "version": 4,
  "terraform_version": "0.12.28",
  "serial": 25,
  "lineage": "0ef1e434-ad58-8943-5088-b7f210353e27",
  "resources": [
    {
      "mode": "data",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:616100519737:security-group/sg-0867787121ae6dccc",
            "description": "Allow inbound HTTP and HTTPS traffic",
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "ALB Security Group"
                ]
              }
            ],
            "id": "sg-0867787121ae6dccc",
            "name": "allow_http_https",
            "tags": {
              "Name": "ALB Security Group"
            },
            "vpc_id": "vpc-0c12de6ae6d738134"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_security_group",
      "name": "webservers",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:616100519737:security-group/sg-04dc483bf0722c8c2",
            "description": "Allow inbound HTTP traffic",
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "Allow HTTP"
                ]
              }
            ],
            "id": "sg-04dc483bf0722c8c2",
            "name": "allow_http",
            "tags": {
              "Name": "Allow HTTP"
            },
            "vpc_id": "vpc-0c12de6ae6d738134"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "public",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:616100519737:subnet/subnet-02a0a302bb4fc7cff",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.31.0.0/20",
            "default_for_az": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "Terraform Subnet-1"
                ]
              }
            ],
            "id": "subnet-02a0a302bb4fc7cff",
            "map_public_ip_on_launch": true,
            "owner_id": "616100519737",
            "state": "available",
            "tags": {
              "Name": "Terraform Subnet-1"
            },
            "vpc_id": "vpc-0c12de6ae6d738134"
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:616100519737:subnet/subnet-0e91376ea4771a175",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.31.64.0/20",
            "default_for_az": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "Terraform Subnet-2"
                ]
              }
            ],
            "id": "subnet-0e91376ea4771a175",
            "map_public_ip_on_launch": true,
            "owner_id": "616100519737",
            "state": "available",
            "tags": {
              "Name": "Terraform Subnet-2"
            },
            "vpc_id": "vpc-0c12de6ae6d738134"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "terraform_vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:616100519737:vpc/vpc-0c12de6ae6d738134",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-050b786dafa238e38",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-33561548",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "TerraformVPC"
                ]
              }
            ],
            "id": "vpc-0c12de6ae6d738134",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0ddd0205d6b43162e",
            "owner_id": "616100519737",
            "state": "available",
            "tags": {
              "Name": "TerraformVPC"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "backend_alb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:616100519737:loadbalancer/app/backend-alb/8720db1a5fcaa6e5",
            "arn_suffix": "app/backend-alb/8720db1a5fcaa6e5",
            "dns_name": "backend-alb-178188086.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-1:616100519737:loadbalancer/app/backend-alb/8720db1a5fcaa6e5",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "backend-alb",
            "security_groups": [
              "sg-0867787121ae6dccc"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-02a0a302bb4fc7cff"
              },
              {
                "subnet_id": "subnet-0e91376ea4771a175"
              }
            ],
            "subnets": [
              "subnet-02a0a302bb4fc7cff",
              "subnet-0e91376ea4771a175"
            ],
            "tags": {
              "Name": "Backend ALB"
            },
            "vpc_id": "vpc-0c12de6ae6d738134",
            "zone_id": "Z35SXDOTRQ7X7K"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "clinic_alb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:616100519737:loadbalancer/app/clinic-alb/0eb84db6a0db4d64",
            "arn_suffix": "app/clinic-alb/0eb84db6a0db4d64",
            "dns_name": "clinic-alb-927127725.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-1:616100519737:loadbalancer/app/clinic-alb/0eb84db6a0db4d64",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "clinic-alb",
            "security_groups": [
              "sg-0867787121ae6dccc"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-02a0a302bb4fc7cff"
              },
              {
                "subnet_id": "subnet-0e91376ea4771a175"
              }
            ],
            "subnets": [
              "subnet-02a0a302bb4fc7cff",
              "subnet-0e91376ea4771a175"
            ],
            "tags": {
              "Name": "Clinic ALB"
            },
            "vpc_id": "vpc-0c12de6ae6d738134",
            "zone_id": "Z35SXDOTRQ7X7K"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "patient_alb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:616100519737:loadbalancer/app/patient-alb/673fd20c97c5c19b",
            "arn_suffix": "app/patient-alb/673fd20c97c5c19b",
            "dns_name": "patient-alb-1546955299.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-1:616100519737:loadbalancer/app/patient-alb/673fd20c97c5c19b",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "patient-alb",
            "security_groups": [
              "sg-0867787121ae6dccc"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-02a0a302bb4fc7cff"
              },
              {
                "subnet_id": "subnet-0e91376ea4771a175"
              }
            ],
            "subnets": [
              "subnet-02a0a302bb4fc7cff",
              "subnet-0e91376ea4771a175"
            ],
            "tags": {
              "Name": "Patient ALB"
            },
            "vpc_id": "vpc-0c12de6ae6d738134",
            "zone_id": "Z35SXDOTRQ7X7K"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "backend_http",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:616100519737:listener/app/backend-alb/8720db1a5fcaa6e5/725dae63b74fecfe",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:616100519737:listener/app/backend-alb/8720db1a5fcaa6e5/725dae63b74fecfe",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:616100519737:loadbalancer/app/backend-alb/8720db1a5fcaa6e5",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "aws_alb.backend_alb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "backend_https",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:616100519737:listener/app/backend-alb/8720db1a5fcaa6e5/85c41c8a86ed658f",
            "certificate_arn": "arn:aws:acm:us-east-1:616100519737:certificate/5943bf3f-7158-4ff1-88c3-8412117a5a88",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:616100519737:targetgroup/backend-servers/f87ec271be9e0fde",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:616100519737:listener/app/backend-alb/8720db1a5fcaa6e5/85c41c8a86ed658f",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:616100519737:loadbalancer/app/backend-alb/8720db1a5fcaa6e5",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "timeouts": null
          },
          "dependencies": [
            "aws_alb.backend_alb",
            "aws_alb_target_group.backend_servers"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "clinic_http",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:616100519737:listener/app/clinic-alb/0eb84db6a0db4d64/0ce171a018063331",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:616100519737:listener/app/clinic-alb/0eb84db6a0db4d64/0ce171a018063331",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:616100519737:loadbalancer/app/clinic-alb/0eb84db6a0db4d64",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "aws_alb.clinic_alb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "clinic_https",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:616100519737:listener/app/clinic-alb/0eb84db6a0db4d64/f0c40ed2ce4a1a1b",
            "certificate_arn": "arn:aws:acm:us-east-1:616100519737:certificate/5943bf3f-7158-4ff1-88c3-8412117a5a88",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:616100519737:targetgroup/clinic-servers/7841568a6d85f42a",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:616100519737:listener/app/clinic-alb/0eb84db6a0db4d64/f0c40ed2ce4a1a1b",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:616100519737:loadbalancer/app/clinic-alb/0eb84db6a0db4d64",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "timeouts": null
          },
          "dependencies": [
            "aws_alb.clinic_alb",
            "aws_alb_target_group.clinic_servers"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "patient_http",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:616100519737:listener/app/patient-alb/673fd20c97c5c19b/a7b0e91c8a9d29f9",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:616100519737:listener/app/patient-alb/673fd20c97c5c19b/a7b0e91c8a9d29f9",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:616100519737:loadbalancer/app/patient-alb/673fd20c97c5c19b",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "aws_alb.patient_alb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "patient_https",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:616100519737:listener/app/patient-alb/673fd20c97c5c19b/40d887b59999af29",
            "certificate_arn": "arn:aws:acm:us-east-1:616100519737:certificate/5943bf3f-7158-4ff1-88c3-8412117a5a88",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:616100519737:targetgroup/patient-servers/af59300139685185",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:616100519737:listener/app/patient-alb/673fd20c97c5c19b/40d887b59999af29",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:616100519737:loadbalancer/app/patient-alb/673fd20c97c5c19b",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "timeouts": null
          },
          "dependencies": [
            "aws_alb.patient_alb",
            "aws_alb_target_group.patient_servers"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "backend_servers",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:616100519737:targetgroup/backend-servers/f87ec271be9e0fde",
            "arn_suffix": "targetgroup/backend-servers/f87ec271be9e0fde",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 10,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:616100519737:targetgroup/backend-servers/f87ec271be9e0fde",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "backend-servers",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "Backend Server Group"
            },
            "target_type": "instance",
            "vpc_id": "vpc-0c12de6ae6d738134"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "clinic_servers",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:616100519737:targetgroup/clinic-servers/7841568a6d85f42a",
            "arn_suffix": "targetgroup/clinic-servers/7841568a6d85f42a",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 10,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:616100519737:targetgroup/clinic-servers/7841568a6d85f42a",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "clinic-servers",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "Clinic Server Group"
            },
            "target_type": "instance",
            "vpc_id": "vpc-0c12de6ae6d738134"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "patient_servers",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:616100519737:targetgroup/patient-servers/af59300139685185",
            "arn_suffix": "targetgroup/patient-servers/af59300139685185",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 10,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:616100519737:targetgroup/patient-servers/af59300139685185",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "patient-servers",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "Patient Server Group"
            },
            "target_type": "instance",
            "vpc_id": "vpc-0c12de6ae6d738134"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "backend_servers",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-059eeca93cf09eebd",
            "arn": "arn:aws:ec2:us-east-1:616100519737:instance/i-0182e289c9cfc60e0",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0182e289c9cfc60e0",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-09f2b891d127cd884",
            "private_dns": "ip-172-31-12-99.ec2.internal",
            "private_ip": "172.31.12.99",
            "public_ip": "107.21.30.66",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0508c8ed3dc937068",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-04dc483bf0722c8c2"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02a0a302bb4fc7cff",
            "tags": {
              "Name": "Backend Server-1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-04dc483bf0722c8c2"
            ]
          }
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-059eeca93cf09eebd",
            "arn": "arn:aws:ec2:us-east-1:616100519737:instance/i-0d3974a1bdd89063b",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d3974a1bdd89063b",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-04c01dca9f165e411",
            "private_dns": "ip-172-31-74-51.ec2.internal",
            "private_ip": "172.31.74.51",
            "public_ip": "3.231.55.116",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0a948e54b7edfb6ff",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-04dc483bf0722c8c2"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e91376ea4771a175",
            "tags": {
              "Name": "Backend Server-2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-04dc483bf0722c8c2"
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "clinic_servers",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-059eeca93cf09eebd",
            "arn": "arn:aws:ec2:us-east-1:616100519737:instance/i-0150727d3d0df60d9",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0150727d3d0df60d9",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-09c98c415619beee9",
            "private_dns": "ip-172-31-0-94.ec2.internal",
            "private_ip": "172.31.0.94",
            "public_ip": "3.81.38.13",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-05f24be82e9c1694d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-04dc483bf0722c8c2"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02a0a302bb4fc7cff",
            "tags": {
              "Name": "Clinic Server-1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-04dc483bf0722c8c2"
            ]
          }
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-059eeca93cf09eebd",
            "arn": "arn:aws:ec2:us-east-1:616100519737:instance/i-01281a38568ad4692",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01281a38568ad4692",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0bcc1f3130c4ef3e3",
            "private_dns": "ip-172-31-68-69.ec2.internal",
            "private_ip": "172.31.68.69",
            "public_ip": "52.3.236.202",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0b39f31bb35436b1e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-04dc483bf0722c8c2"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e91376ea4771a175",
            "tags": {
              "Name": "Clinic Server-2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-04dc483bf0722c8c2"
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "patient_servers",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-059eeca93cf09eebd",
            "arn": "arn:aws:ec2:us-east-1:616100519737:instance/i-0556eea1e76bbf044",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0556eea1e76bbf044",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-08417c4a6d28a851f",
            "private_dns": "ip-172-31-15-96.ec2.internal",
            "private_ip": "172.31.15.96",
            "public_ip": "54.172.6.159",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0cb2ebaebf45fe072",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-04dc483bf0722c8c2"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02a0a302bb4fc7cff",
            "tags": {
              "Name": "Patient Server-1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-04dc483bf0722c8c2"
            ]
          }
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-059eeca93cf09eebd",
            "arn": "arn:aws:ec2:us-east-1:616100519737:instance/i-03054669ba93d0750",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03054669ba93d0750",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0613de020a3e56540",
            "private_dns": "ip-172-31-73-181.ec2.internal",
            "private_ip": "172.31.73.181",
            "public_ip": "3.215.179.27",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-032de81d0284f5aac",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-04dc483bf0722c8c2"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e91376ea4771a175",
            "tags": {
              "Name": "Patient Server-2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-04dc483bf0722c8c2"
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "backend_servers",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:616100519737:targetgroup/backend-servers/f87ec271be9e0fde-20200716172935996500000002",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:616100519737:targetgroup/backend-servers/f87ec271be9e0fde",
            "target_id": "i-0182e289c9cfc60e0"
          },
          "dependencies": [
            "aws_alb_target_group.backend_servers",
            "aws_instance.backend_servers"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:616100519737:targetgroup/backend-servers/f87ec271be9e0fde-20200716172936026800000005",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:616100519737:targetgroup/backend-servers/f87ec271be9e0fde",
            "target_id": "i-0d3974a1bdd89063b"
          },
          "dependencies": [
            "aws_alb_target_group.backend_servers",
            "aws_instance.backend_servers"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "clinic_servers",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:616100519737:targetgroup/clinic-servers/7841568a6d85f42a-20200716172935996400000001",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:616100519737:targetgroup/clinic-servers/7841568a6d85f42a",
            "target_id": "i-0150727d3d0df60d9"
          },
          "dependencies": [
            "aws_alb_target_group.clinic_servers",
            "aws_instance.clinic_servers"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:616100519737:targetgroup/clinic-servers/7841568a6d85f42a-20200716172936069900000006",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:616100519737:targetgroup/clinic-servers/7841568a6d85f42a",
            "target_id": "i-01281a38568ad4692"
          },
          "dependencies": [
            "aws_alb_target_group.clinic_servers",
            "aws_instance.clinic_servers"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "patient_servers",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:616100519737:targetgroup/patient-servers/af59300139685185-20200716172936024500000004",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:616100519737:targetgroup/patient-servers/af59300139685185",
            "target_id": "i-0556eea1e76bbf044"
          },
          "dependencies": [
            "aws_alb_target_group.patient_servers",
            "aws_instance.patient_servers"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:616100519737:targetgroup/patient-servers/af59300139685185-20200716172935996600000003",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:616100519737:targetgroup/patient-servers/af59300139685185",
            "target_id": "i-03054669ba93d0750"
          },
          "dependencies": [
            "aws_alb_target_group.patient_servers",
            "aws_instance.patient_servers"
          ]
        }
      ]
    }
  ]
}